2007-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-with-environment): Simplify.
	(server-select-display, server-unselect-display): Re-add functions that
	seem to have been lost in the multi-tty merge.
	(server-eval-and-print, server-create-tty-frame)
	(server-create-window-system-frame, server-goto-toplevel)
	(server-execute, server-return-error): New functions extracted from
	server-process-filter.
	(server-execute-continuation): New functions.
	(server-process-filter): Restructure so that all arguments are analysed
	first and then acted upon in a subsequent stage  This way
	server-goto-toplevel can be executed later, when we know if
	it's necessary.
	Remove the "-version" and "-version-good" support.

2007-09-16  Drew Adams  <drew.adams@oracle.com>

	* cus-edit (custom-face-edit-activate): Doc fix.

2007-09-16  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el, calendar/calendar.el, calendar/diary-lib.el:
	Following cal-bahai renaming, update all instances of
	list-bahai-diary-entries to diary-bahai-list-entries,
	mark-bahai-diary-entries to diary-bahai-mark-entries,
	calendar-goto-bahai-date to calendar-bahai-goto-date,
	insert-bahai-diary-entry to diary-bahai-insert-entry,
	insert-monthly-bahai-diary-entry to diary-bahai-insert-monthly-entry,
	insert-yearly-bahai-diary-entry to diary-bahai-insert-yearly-entry, and
	calendar-print-bahai-date to calendar-bahai-print-date.

	* textmodes/tex-mode.el (tex-region): Handle the case where the
	region is not in `tex-main-file'.  Move the old code that applies
	to both cases...
	(tex-region-1): ...to this new function.

2007-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-process-sentinel): New function.
	(vc-exec-after): Use it instead of using ugly hackish analysis and
	construction of Elisp code.
	(vc-sentinel-movepoint): New dynamically scoped var.
	(vc-print-log, vc-annotate): Set it to move the user's point.

	* vc-cvs.el (vc-cvs-annotate-time): Use inhibit-read-only and